@@ -276,7 +276,19 @@ Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "PipelineParallelDemo", "Dem
 EndProject
 Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "CommandPipelineDemo", "Demos\AllOverIt.ReactiveUI\CommandPipelineDemo\CommandPipelineDemo.csproj", "{2BE9441D-83D4-4F78-943B-00AE7B15B1D5}"
 EndProject
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "AllOverIt.ReactiveUI.Tests", "Tests\AllOverIt.ReactiveUI.Tests\AllOverIt.ReactiveUI.Tests.csproj", "{FD0EB5E3-B7D8-44CB-BE55-36FD0CBDAF9D}"
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "AllOverIt.ReactiveUI.Tests", "Tests\AllOverIt.ReactiveUI.Tests\AllOverIt.ReactiveUI.Tests.csproj", "{FD0EB5E3-B7D8-44CB-BE55-36FD0CBDAF9D}"
+EndProject
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "AllOverIt.Plugin", "Source\AllOverIt.Plugin\AllOverIt.Plugin.csproj", "{23E99EA7-D8D4-4B4C-896E-847129BECB98}"
+EndProject
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "AllOverIt.Plugin", "AllOverIt.Plugin", "{7928FB2D-C6B4-44C1-B1B0-291BFC21A75F}"
+EndProject
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "StartupHook", "StartupHook", "{8CE9D7F7-68DA-48B8-8DCE-456D467737F8}"
+EndProject
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "GCCollectorStartupHook", "Demos\AllOverIt.Plugin\StartupHook\GCCollectorStartupHook\GCCollectorStartupHook.csproj", "{78C09DDA-60A9-4B17-9794-DCC4D095FDBA}"
+EndProject
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "GCCollectorStartupHookProxy", "Demos\AllOverIt.Plugin\StartupHook\GCCollectorStartupHookProxy\GCCollectorStartupHookProxy.csproj", "{20934975-3914-4A9B-BD1E-A8FCB0F724D1}"
+EndProject
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "StartupHookDemo", "Demos\AllOverIt.Plugin\StartupHook\StartupHookDemo\StartupHookDemo.csproj", "{30E82ACA-45EE-4E09-89A8-9AF337569807}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
@@ -660,6 +672,22 @@ Global
 		{FD0EB5E3-B7D8-44CB-BE55-36FD0CBDAF9D}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{FD0EB5E3-B7D8-44CB-BE55-36FD0CBDAF9D}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{FD0EB5E3-B7D8-44CB-BE55-36FD0CBDAF9D}.Release|Any CPU.Build.0 = Release|Any CPU
+		{23E99EA7-D8D4-4B4C-896E-847129BECB98}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{23E99EA7-D8D4-4B4C-896E-847129BECB98}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{23E99EA7-D8D4-4B4C-896E-847129BECB98}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{23E99EA7-D8D4-4B4C-896E-847129BECB98}.Release|Any CPU.Build.0 = Release|Any CPU
+		{78C09DDA-60A9-4B17-9794-DCC4D095FDBA}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{78C09DDA-60A9-4B17-9794-DCC4D095FDBA}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{78C09DDA-60A9-4B17-9794-DCC4D095FDBA}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{78C09DDA-60A9-4B17-9794-DCC4D095FDBA}.Release|Any CPU.Build.0 = Release|Any CPU
+		{20934975-3914-4A9B-BD1E-A8FCB0F724D1}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{20934975-3914-4A9B-BD1E-A8FCB0F724D1}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{20934975-3914-4A9B-BD1E-A8FCB0F724D1}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{20934975-3914-4A9B-BD1E-A8FCB0F724D1}.Release|Any CPU.Build.0 = Release|Any CPU
+		{30E82ACA-45EE-4E09-89A8-9AF337569807}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{30E82ACA-45EE-4E09-89A8-9AF337569807}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{30E82ACA-45EE-4E09-89A8-9AF337569807}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{30E82ACA-45EE-4E09-89A8-9AF337569807}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
@@ -791,6 +819,12 @@ Global
 		{51D01D2C-D5F1-46DF-B4E8-6D222CBE9FF8} = {595F3EB1-3F3D-4942-9A5A-95CD8621607B}
 		{2BE9441D-83D4-4F78-943B-00AE7B15B1D5} = {CBA4C7C8-2425-4DDB-969E-831048D84BF3}
 		{FD0EB5E3-B7D8-44CB-BE55-36FD0CBDAF9D} = {0C08FAE6-4CD9-4C7B-A849-EB0DB9BD1451}
+		{23E99EA7-D8D4-4B4C-896E-847129BECB98} = {FC8E8DB2-1299-44F4-A233-0EDCE225BB8C}
+		{7928FB2D-C6B4-44C1-B1B0-291BFC21A75F} = {D9F6B8A1-4B01-4708-8851-741FC19F2440}
+		{8CE9D7F7-68DA-48B8-8DCE-456D467737F8} = {7928FB2D-C6B4-44C1-B1B0-291BFC21A75F}
+		{78C09DDA-60A9-4B17-9794-DCC4D095FDBA} = {8CE9D7F7-68DA-48B8-8DCE-456D467737F8}
+		{20934975-3914-4A9B-BD1E-A8FCB0F724D1} = {8CE9D7F7-68DA-48B8-8DCE-456D467737F8}
+		{30E82ACA-45EE-4E09-89A8-9AF337569807} = {8CE9D7F7-68DA-48B8-8DCE-456D467737F8}
 	EndGlobalSection
 	GlobalSection(ExtensibilityGlobals) = postSolution
 		SolutionGuid = {19DD11B3-596E-4862-B5C4-1FFFFB173106}
