@@ -1,0 +1,13 @@
+<Project Sdk="Microsoft.NET.Sdk">
+
+    <PropertyGroup>
+        <TargetFrameworks>net7.0;net6.0;net5.0;netcoreapp3.1</TargetFrameworks>
+        <Copyright>Copyright © 2023</Copyright>
+        <Description>A library providing a dynamic plugin framework.</Description>
+        <PackageTags>utilities</PackageTags>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\AllOverIt.Assertion\AllOverIt.Assertion.csproj" />
+    </ItemGroup>
+</Project>
